# DM

./: CMakeLists.txt  README.md  mark.markdown  plot_results.plt
src/: Equation.cpp  Equation.h  GaussSeidel.h  IMesh.h  Jacobi.h  NonUniformMesh.cpp  NonUniformMesh.h  Problem.cpp  Problem.h  Timer.cpp  Timer.h  UniformMesh.cpp  UniformMesh.h  Variable.cpp  Variable.h  main.cpp  test.cpp
tests/: EquationTest.cpp  ProblemTest.cpp  UniformMeshTest.cpp
